misc cleanup